task_3/homework/deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: "/etc/nginx/conf.d"
          - name: nfs-www
            mountPath: "/var/www/html/"    
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap
        - name: nfs-www
          persistentVolumeClaim:
            claimName: pvc-nfs
