task_3/homework/ingress-minio-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress-2
  labels:
    name: minio-ingress-2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-svc
            port:
              number: 9001
      - pathType: Prefix
        path: "/web"
        backend:
          service:
            name: web-headless
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  selector:
    app: minio
  ports:
  - port: 9001
    targetPort: 9001
