task_3/homework/ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  labels:
    name: minio-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-svc
            port:
              number: 9001

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  selector:
    app: minio
  ports:
  - port: 9001
    targetPort: 9001
